--- a/src/com/gui/MainWindow.form
+++ b/src/com/gui/MainWindow.form
@@ -1,29 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.gui.MainWindow">
-  <grid id="27dc6" binding="panel_Main" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel_Main" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-12828863"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="8e3bb" class="javax.swing.JButton" binding="btn_Send">
+      <component id="8e3bb" class="javax.swing.JButton" binding="btn_Script">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Send"/>
-        </properties>
-      </component>
-      <component id="31994" class="javax.swing.JTextArea" binding="txtArea_Result">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <enabled value="false"/>
+          <text value="Skript ausführen"/>
         </properties>
       </component>
       <component id="c58f2" class="javax.swing.JComboBox" binding="cmb_Query">
@@ -32,11 +24,41 @@
         </constraints>
         <properties/>
       </component>
-      <component id="e78f2" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="f4fb4" class="javax.swing.JTextField" binding="txtFieldStatus">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-12828863"/>
+          <editable value="false"/>
+          <enabled value="true"/>
+          <horizontalAlignment value="10"/>
+        </properties>
+      </component>
+      <scrollpane id="4430d" binding="pane_Table">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
+        <border type="bevel-lowered"/>
+        <children>
+          <component id="8d71" class="javax.swing.JTable" binding="table_Response">
+            <constraints/>
+            <properties>
+              <enabled value="true"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="59235" class="javax.swing.JButton" binding="btn_Import">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Importieren"/>
+        </properties>
       </component>
     </children>
   </grid>
