--- a/src/com/gui/MainWindow.form
+++ b/src/com/gui/MainWindow.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel_Main" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="700" height="503"/>
+      <xy x="20" y="20" width="771" height="503"/>
     </constraints>
     <properties>
       <background color="-12828863"/>
@@ -59,7 +59,7 @@
                   </component>
                 </children>
               </scrollpane>
-              <grid id="cb33a" binding="panel_Import_Buttons" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="cb33a" binding="panel_Import_Buttons" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -69,17 +69,13 @@
                 <children>
                   <component id="c58f2" class="javax.swing.JComboBox" binding="cmb_Query">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="359" height="30"/>
-                      </grid>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
                   </component>
                   <component id="8e3bb" class="javax.swing.JButton" binding="btn_Script">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="359" height="30"/>
-                      </grid>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Skript ausführen"/>
@@ -87,7 +83,7 @@
                   </component>
                   <component id="59235" class="javax.swing.JButton" binding="btn_ImportXLSX">
                     <constraints>
-                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value=".xlsx importieren"/>
@@ -95,11 +91,19 @@
                   </component>
                   <component id="6c891" class="javax.swing.JButton" binding="btn_ImportP1">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <enabled value="false"/>
                       <text value="P1 importieren"/>
+                    </properties>
+                  </component>
+                  <component id="6112b" class="javax.swing.JButton" binding="btn_NotFoundDevices">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Nicht gefundene Geräte"/>
                     </properties>
                   </component>
                 </children>
